# haskellPatience

./: Opmerkingen.txt  patience.cabal
lib/: DataStructures.hs  Logica.hs
src/: Main.hs
test/: TestsProject.hs
